[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/GridObject/GridObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/MovableObject/MovableObject.gd" type="Script" id=2]
[ext_resource path="res://Audio/Sounds/Step1.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=4]
resource_name = "invalid"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -16, -0.25, 0, 0.25, 0, -12, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0, -14, -0.25, 0, 0.25, 0, -16, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 )
}

[node name="MovableObject" type="Node2D"]
script = ExtResource( 2 )

[node name="GridObject" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="GridObject"]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="GridObject"]
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridObject/Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="GridObject/Area2D"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 8 )
collide_with_areas = true
collide_with_bodies = false

[node name="Content" type="Node2D" parent="GridObject"]
position = Vector2( 8, 8 )

[node name="Tween" type="Tween" parent="GridObject/Content"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GridObject/Content"]
anims/RESET = SubResource( 2 )
anims/hover = SubResource( 3 )
anims/invalid = SubResource( 4 )

[connection signal="tween_all_completed" from="GridObject/Content/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="animation_finished" from="GridObject/Content/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
